fix margins on smaller window

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,7 +54,7 @@ body{
 }
 
 .content{
-  top: 10vh;
+  top: 100px;
   overflow: auto;
   height: 80vh;
   background: rgba(45,76,135,0.5);
